# acgroup

./: insaat-erp-mimari-dokumani.md
insaat-erp/: .env  .env.example  docker-compose.yml
insaat-erp/backend/: .dockerignore  .goutputstream-0IICN3  alembic.ini  entrypoint.sh  pyproject.toml  seed.py
insaat-erp/backend/alembic/: env.py
insaat-erp/backend/alembic/versions/: 6ceb3538b1af_initial_tables.py  a1b2c3d4e5f6_add_expense_installments.py
insaat-erp/backend/app/: main.py
insaat-erp/backend/app/api/v1/: __init__.py  auth.py  customers.py  dashboard.py  expenses.py  projects.py  sales.py  units.py
insaat-erp/backend/app/core/: config.py  dependencies.py  security.py
insaat-erp/backend/app/db/: base.py  session.py
insaat-erp/backend/app/models/: __init__.py  activity.py  audit.py  contract.py  customer.py  document.py  expense.py  expense_installment.py  installment.py  opportunity.py  payment.py  project.py  sale.py  supplier.py  unit.py  user.py
insaat-erp/backend/app/schemas/: __init__.py  auth.py  customer.py  dashboard.py  expense.py  project.py  sale.py  unit.py
insaat-erp/frontend/: Dockerfile
insaat-erp/frontend/apps/web/: next.config.js  package.json  tailwind.config.js
insaat-erp/frontend/apps/web/app/: globals.css  layout.tsx  page.tsx
insaat-erp/frontend/apps/web/components/: CustomersPage.tsx  Dashboard.tsx  ExpensesPage.tsx  ProjectsPage.tsx  SalesPage.tsx  Sidebar.tsx  SuppliersPage.tsx
insaat-erp/frontend/apps/web/lib/: api.ts
insaat-erp/nginx/: nginx.conf
insaat-erp/scripts/: seed-data.py
